--- a/game/style.css
+++ b/game/style.css
@@ -7,6 +7,7 @@
 body {
     font-family: Arial, sans-serif;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     height: 100vh;
@@ -41,3 +42,8 @@ body {
     background-color: green;
 }
 
+.info {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 20px;
+}
