--- a/game/style.css
+++ b/game/style.css
@@ -16,14 +16,14 @@ body {
 
 .game-area {
     position: relative;
-    width: 100%;
+    width: 800px;
     height: 200px;
     border: 2px solid #333;
     background-color: white;
     overflow: hidden;
 }
 
-.dino {
+.player {
     position: absolute;
     bottom: 0;
     left: 50px;
@@ -33,11 +33,11 @@ body {
     border-radius: 5px;
 }
 
-.cactus {
+.obstacle {
     position: absolute;
     bottom: 0;
     right: 0;
-    width: 20px;
+    width: 30px;
     height: 40px;
     background-color: green;
 }
