--- a/game/style.css
+++ b/game/style.css
@@ -1,8 +1,17 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 body {
+    font-family: Arial, sans-serif;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
-    font-family: Arial, sans-serif;
+    height: 100vh;
+    background-color: #f4f4f4;
 }
 
 .game-area {
@@ -31,4 +40,10 @@ body {
     width: 30px;
     height: 40px;
     background-color: green;
+}
+
+.info {
+    margin-top: 20px;
+    text-align: center;
+    font-size: 20px;
 }
